testsuite/tests/dependent/should_fail/TypeSkolEscape.stderr

TypeSkolEscape.hs:8:1: error:
    • Quantified type's kind mentions quantified type variable
      (skolem escape)
           type: forall a1. a1
        of kind: TYPE v
    • In the type synonym declaration for ‘Bad’
